--- a/src/Development.css
+++ b/src/Development.css
@@ -24,52 +24,55 @@ body {
   text-align: center;
   background-color: #121212;
   color: #e6e6e6;
-  max-width: 1600px;
+  max-width: 100rem; /* 1600px */
   margin: 0 auto;
+  padding: 5rem 1.25rem;
 }
 
 .dev-header {
-  padding: 50px 20px;
+  padding: 3.125rem 1.55rem; /* 50px 20px */
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 50rem; /* 800px */
 }
 
 .dev-header h1 {
   font-size: 3rem;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem; /* 20px */
   color: #298dff;
+  margin-left: 4.5rem;
 }
 
 .dev-footer {
-  padding: 20px 0;
+  padding: 1.25rem 0; /* 20px */
   background-color: #1c1c1c;
   font-size: 0.9em;
   color: #a0a0a0;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 3.125rem; /* 50px */
 }
 
 .tech-stack-section {
-  margin-top: 50px;
-  padding: 50px 20px;
+  margin-top: 3.125rem; /* 50px */
+  padding: 3.125rem 1.25rem; /* 50px 20px */
   background-color: #121212;
   color: #e6e6e6;
 }
 
 .tech-stack-section h2 {
   font-size: 3rem;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem; /* 20px */
   color: #298dff;
   font-family: 'StarJediHollow';
   font-weight: 700;
-  letter-spacing: 3px;
+  letter-spacing: 0.1875rem; /* 3px */
+  padding-left: 2.5rem;
 }
 
 .tech-stack-section p {
-  font-size: 18px;
-  margin-bottom: 20px;
-  padding-left: 200px;
-  padding-right: 200px;
+  font-size: 1.125rem; /* 18px */
+  margin-bottom: 1.25rem; /* 20px */
+  padding-left: 13.5rem; /* 200px */
+  padding-right: 12.5rem; /* 200px */
   text-align: justify;
 }
 
@@ -77,32 +80,32 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  gap: 20px;
+  gap: 1.25rem; /* 20px */
   justify-items: center;
-  margin-left: 200px;
-  margin-right: 200px;
-  margin-top: 50px;
+  margin-left: 12.5rem; /* 200px */
+  margin-right: 12.5rem; /* 200px */
+  margin-top: 3.125rem; /* 50px */
 }
 
 .tech {
   background-color: #b1b1b179;
   color: #121212;
-  padding: 10px 20px;
-  border-radius: 20px;
-  font-size: 16px;
+  padding: 0.625rem 1.25rem; /* 10px 20px */
+  border-radius: 1.25rem; /* 20px */
+  font-size: 1rem; /* 16px */
   font-weight: bold;
-  width: 150px;
-  height: 100px;
+  width: 9.375rem; /* 150px */
+  height: 6.25rem; /* 100px */
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border:  4px dotted white;
+  border: 0.25rem dotted white; /* 4px */
 }
 
 .tech img {
-  max-width: 40px;
-  margin-bottom: 10px;
+  max-width: 2.5rem; /* 40px */
+  margin-bottom: 0.625rem; /* 10px */
   object-fit: contain;
 }
 
@@ -114,35 +117,37 @@ body {
 .project-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 55px;
-  margin-top: 30px;
-  margin-left: 250px;
-  margin-right: 300px;
+  gap: 3.4375rem; /* 55px */
+  margin-top: 1.875rem; /* 30px */
+  margin-left: 15.625rem; /* 250px */
+  margin-right: 18.75rem; /* 300px */
 }
 
 .project-card {
   background-color: #1c1c1c;
-  border-radius: 15px;
-  border: 2px solid #ffffff;
-  padding: 20px;
+  border-radius: 0.9375rem; /* 15px */
+  border: 0.125rem solid #ffffff; /* 2px */
+  padding: 1.25rem; /* 20px */
   text-align: center;
   transition: all 0.3s ease;
   position: relative;
   overflow: hidden;
-  width: 370px;
-  height: 190px;
+  width: 23.125rem; /* 370px */
+  height: 11.875rem; /* 190px */
   margin: 0 auto;
 }
 
 .project-card h3 {
-  font-size: 1.5em;
-  margin-bottom: 10px;
+  font-size: 1rem;
+  margin-bottom: 0.8rem; /* 10px */
   color: #ffffff;
 }
 
+
 .project-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.625rem); /* -10px */
+  box-shadow: 0px 0.625rem 0.9375rem rgba(0, 0, 0, 0.3); /* 10px 15px */
+  
 }
 
 .project-card .overlay {
@@ -160,10 +165,10 @@ body {
   opacity: 1;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 64rem) { /* 1024px */
   .project-grid {
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
 
   .tech-stack {
@@ -171,44 +176,46 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 48rem) { /* 768px */
   .project-grid {
     grid-template-columns: 1fr;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
 
   .tech-stack {
     grid-template-columns: 1fr;
   }
 }
-.tech-stack a{
+
+.tech-stack a {
   text-decoration: none;
-  padding: 20px;
+  padding: 1.25rem; /* 20px */
 }
+
 .resume {
-  margin-top: 100px;
-  height: 60px;
-  width: 150px;
-  border-radius: 20px;
-  border: 3px solid white;
-  background-color:hsla(0, 0%, 69%, 0.3);
-  opacity: 1;
+  margin-top: 6.25rem; /* 100px */
+  height: 3.75rem; /* 60px */
+  width: 9.375rem; /* 150px */
+  border-radius: 1.25rem; /* 20px */
+  border: 0.1875rem solid white; /* 3px */
+  background-color: #b1b1b179;
+  opacity: 0.9;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 
 .resume a {
-  font-family:'Space Mono', monospace;
+  font-family: 'Space Mono', monospace;
   font-weight: 700;
-  padding-bottom: 10px;
-  padding-top: 5px;
+  padding-bottom: 0.625rem; /* 10px */
+  padding-top: 0.3125rem; /* 5px */
   text-align: center;
-  color:white;
-  font-size: 16px;
+  color: white;
+  font-size: 1rem; /* 16px */
   text-decoration: none;
 }
 .project-card img {
   width: 100%;
-  object-fit: cover; 
+  object-fit: cover;
 }
