--- a/src/About.css
+++ b/src/About.css
@@ -13,47 +13,34 @@
   font-style: normal;
 }
 .about-section {
-  padding: 5rem 1.25rem; /* 80px 20px */
+  padding: 3% 1%; /* 80px 20px */
   background-color: #121212;
   color: #e6e6e6;
   text-align: center;
 }
 
 .about-container {
-  max-width: 75rem; /* 1200px */
+  max-width: 90%; /* 1200px */
   margin: 0 auto;
 }
 
 .about-title {
   font-size: 2.8125rem; /* 45px */
   font-weight: bold;
-  margin-bottom: 1.25rem; /* 20px */
+  margin-bottom:2%; /* 20px */
   color: white;
 }
 
 .about-description {
   font-size: 1.125rem; /* 18px */
   line-height: 1.8;
-  margin-bottom: 1.875rem; /* 30px */
+  margin-bottom: 2%; /* 30px */
   color: #d7ec18;
   font-family: 'StarJedi';
 }
 
-.spline-container {
-  height: 25rem; /* 400px */
-  width: 100%;
-  display: inline-block;
-  margin-top: -23.75rem; /* -380px */
-  margin-left: -40.625rem; /* -650px */
-}
 
-.spline-container iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-@media (max-width: 48rem) { /* 768px */
+@media (max-width: 80%) { /* 768px */
   .cards-container {
     align-items: center;
   }
@@ -68,7 +55,6 @@
   display: flex;
   justify-content: center;
   gap: 21.875rem; /* 350px */
-  margin-bottom: 3.125rem; /* 50px */
 }
 
 .nav-links a {
@@ -92,14 +78,14 @@
 
 .hello {
   font-size: 1rem; /* 16px */
-  width: 34.375rem; /* 550px */
-  height: 21.875rem; /* 350px */
+  width: 60%; /* 550px */
+  padding-bottom: 4%;
   font-family: 'Space Mono', monospace;
   text-align: justify;
   line-height: 1.2;
-  margin: 0 3.125rem; /* 50px */
-  margin-left: 21.875rem; /* 350px */
-  margin-top: 1.5625rem; /* 25px */
+  margin: 0% 2%; /* 50px */
+  margin-left: 35%; /* 350px */
+  margin-top: 2.5%; /* 25px */
   font-weight: 600;
   display: inline-block;
 }
@@ -108,15 +94,15 @@
   border: 0.125rem solid pink; /* 2px */
   border-radius: 1.25rem; /* 20px */
   width: 70%;
-  margin-left: 13.75rem; /* 220px */
+  margin-left: 15%; /* 220px */
 }
 
 .left {
-  margin-top: 2.625rem; /* 42px */
-  margin-left: 3.125rem; /* 50px */
+  margin-top: 2.5%; /* 42px */
+  margin-left: 3%; /* 50px */
   position: absolute;
-  width: 15.625rem; /* 250px */
-  height: 15.625rem; /* 250px */
+  width:  17%;/* 250px */
+  height: 43%; /* 250px */
   border-radius: 1.25rem; /* 20px */
   overflow: hidden;
   display: flex;
@@ -125,8 +111,9 @@
 }
 
 .left img {
-  margin-top: 0.3125rem; /* 5px */
-  width: 110%;
+  margin-top: -2%; /* 5px */
+  margin-bottom: -3%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 1.25rem; /* 20px */
